結果履歴作ってる最中

--- a/camera/Base.lproj/Main.storyboard
+++ b/camera/Base.lproj/Main.storyboard
@@ -25,6 +25,34 @@
             </objects>
             <point key="canvasLocation" x="596.5" y="299.5"/>
         </scene>
+        <!--Table View Controller-->
+        <scene sceneID="8Cg-RI-hkr">
+            <objects>
+                <tableViewController id="MaN-5A-Wwk" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="UXx-aw-a9o">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="MTc-6v-IzO">
+                                <rect key="frame" x="0.0" y="28" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="MTc-6v-IzO" id="X8U-H9-REn">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="MaN-5A-Wwk" id="Up6-q5-1Te"/>
+                            <outlet property="delegate" destination="MaN-5A-Wwk" id="gE3-Dm-2qp"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PDx-rR-p6C" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1273" y="240"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="xew-Oj-ByE">
             <objects>
@@ -130,7 +158,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uLk-Ja-1XZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-148" y="266"/>
+            <point key="canvasLocation" x="-15" y="177"/>
         </scene>
     </scenes>
 </document>
